Fixed bug with width on mobile

--- a/style.css
+++ b/style.css
@@ -71,4 +71,8 @@ body {
   #screen {
     flex-grow: 1;
   }
+  #container {
+    width: 95%;
+    height: 80%;
+  }
 }
